dataset1235/2025-2/1153765216/users/230013788/executions/2814675586_2403290319.log
== RUN (2025-08-26 18:58:01)
-- CODE: 
preco = float(input("Digite um preço: 122.1 "))
quantidade = int(input("Digite a quantidade: 1 "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:17:08)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:17:26)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:58:27)
-- CODE: 
preco = float(input("Digite um preço:"))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço:Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço:Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço:Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço:Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço:Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço:Digite a quantidade: 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:18:47)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:57:34)
-- CODE: 
preco = float(input("Digite um preço: 122.1 "))
quantidade = int(input("Digite a quantidade: 1 "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:57:53)
-- CODE: 
preco = float(input("Digite um preço: (122.1) "))
quantidade = int(input("Digite a quantidade: (1) "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:17:15)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:57:53)
-- CODE: 
preco = float(input("Digite um preço: (122.1) "))
quantidade = int(input("Digite a quantidade: (1) "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: (122.1) Digite a quantidade: (1) 122.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:16:41)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =   
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 4
    custo_total =   
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 4
    custo_total =   
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 4
    custo_total =   
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 4
    custo_total =   
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 4
    custo_total =   
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 4
    custo_total =   
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:17:24)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:17:33)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:59:57)
-- CODE: 
preco = float(input("Digite um preço:"))
quantidade = int(input("Digite a quantidade: "))

custo_total = preco* quantidade 
print(custo_total) 
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço:Digite a quantidade: 2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço:Digite a quantidade: 450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço:Digite a quantidade: 662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço:Digite a quantidade: 77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço:Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço:Digite a quantidade: 350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:58:12)
-- CODE: 
preco = float(input("Digite um preço: 122.1 "))
quantidade = int(input("Digite a quantidade: 1 "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:59:56)
-- CODE: 
preco = float(input("Digite um preço:"))
quantidade = int(input("Digite a quantidade: "))

custo_total = preco* quantidade 
print(custo_total) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço:Digite a quantidade: 2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço:Digite a quantidade: 450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço:Digite a quantidade: 662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço:Digite a quantidade: 77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço:Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço:Digite a quantidade: 350.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:18:15)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:57:35)
-- CODE: 
preco = float(input("Digite um preço: 122.1 "))
quantidade = int(input("Digite a quantidade: 1 "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:17:17)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:58:00)
-- CODE: 
preco = float(input("Digite um preço: 122.1 "))
quantidade = int(input("Digite a quantidade: 1 "))

custo_total =  122.5
print(custo_total) 
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: 122.1 Digite a quantidade: 1 122.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:17:35)
-- CODE: 
preco = float(input("Digite um preço: "))
quantidade = int(input("Digite a quantidade: "))

custo_total =  122.5
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
Digite um preço: Digite a quantidade: 122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
Digite um preço: Digite a quantidade: 122.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
